--- a/My-Personal-Website/style.css
+++ b/My-Personal-Website/style.css
@@ -1,3 +1,18 @@
 body{
-    background: lightblue;
+    background-color: darkcyan;
+    background-image: url("../background image.jpg");
+    
+}
+h1{
+    text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:white;
+}
+
+h2{
+    color: antiquewhite;
+}
+
+h3{
+    color: aliceblue;
 }
